# kyber-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  MATH.md  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: kyber_bench.rs
examples/: kem_debug.rs  keygen_encaps.rs  serialize.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decaps.rs  fuzz_kem_roundtrip.rs  fuzz_poly_deserialize.rs
src/: cbd.rs  indcpa.rs  kem.rs  lib.rs  ntt.rs  ntt_simd.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  safe_api.rs  symmetric.rs  verify.rs
tests/: kat_vectors.rs  kem_tests.rs  safe_api_tests.rs
