[package]
name = "lattice-kyber"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["lattice-safe contributors"]
description = "Pure Rust implementation of ML-KEM (FIPS 203) / CRYSTALS-Kyber post-quantum key encapsulation mechanism"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lattice-safe/kyber-rs"
homepage = "https://github.com/lattice-safe"
documentation = "https://docs.rs/lattice-kyber"
keywords = [
    "ml-kem",
    "fips-203",
    "post-quantum",
    "cryptography",
    "key-encapsulation",
]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["getrandom"]
getrandom = ["dep:getrandom"]
serde = ["dep:serde"]
simd = []

[dependencies]
sha3 = { version = "0.12", default-features = false }
shake = { version = "0.1", default-features = false }
zeroize = { version = "1", features = [
    "alloc",
    "zeroize_derive",
], default-features = false }
getrandom = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[lib]
name = "kyber"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "kyber_bench"
harness = false

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
